Fix plaatjes overflow in forum draadjes mobiel

--- a/assets/scss/module/_forum.scss
+++ b/assets/scss/module/_forum.scss
@@ -123,6 +123,10 @@ i.fab {
 	}
 
 	.forum-post {
+		.text-container {
+			min-width: 1px;
+		}
+
 		p:empty {
 			display: none;
 		}
